syntax = 'proto3';

package userservice;

option go_package = "./;pb";

service UserService{
  rpc GetUserByLogin(GetUserByLoginRequest) returns (GetUserByLoginResponse) {}
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {}
}

message GetUserByLoginRequest{
  string login = 1;
}

message GetUserByLoginResponse{
  User result = 1;
}

message User {
  int32 Id = 1;
  string FirstName = 2;
  string LastName = 3;
  string Phone = 4;
  string Login = 5;
  string Password = 6;
  bool IsConfirmed = 7;
}

message RegisterUserRequest{
  string FirstName = 1;
  string LastName = 2;
  string Phone = 3;
  string Login = 4;
  string Password = 5;
  bool IsConfirmed = 6;
}

message RegisterUserResponse{
  int32 Id = 1;
}


